# server_client

./: CMakeLists.txt  README.md
indexpage/: CarMonitor.html
src/: Client.cpp  Client.h  HttpMainPage.cpp  HttpMainPage.h  MessagesExchange.cpp  MessagesExchange.h  NetworkHeaders.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketBinding.cpp  SocketBinding.h  SocketConnection.cpp  SocketConnection.h  SocketListening.cpp  SocketListening.h  main.cpp
